#
bin_PROGRAMS = xnirspec
xnirspec_SOURCES = activebut.f \
arclength.f \
binsearch.f \
boundary.f \
button.inc \
button.f \
buttqbr.f \
buttqcf.f \
buttqch.f \
buttqex.f \
buttqit.f \
buttqpr.f \
buttqxb.f \
buttqyb.f \
buttqytext.f \
buttsbr.f \
buttscf.f \
buttsch.f \
buttsex.f \
buttsit.f \
buttspr.f \
buttsxb.f \
buttsyb.f \
buttsytext.f \
centroid.f \
combine.f \
combpf.f \
creatergb.f \
cubspl.f \
cubsplx.f \
distpp.f \
distpr.f \
downhill.f \
drawpolxy.f \
drawpolyx.f \
expline.f \
factorialpf.f \
fderi.f \
findmax.f \
findmml.f \
fitpol.f \
fmap.f \
fmean0.f \
fmean0e.f \
fmean0w.f \
fmean1.f \
fmean2.f \
fmean2e.f \
fmedian1.f \
fmedian1e.f \
fpoly.f \
fpolyinv.f \
fstatistic.f \
gauscfit.f \
gauss2dfit.f \
gaussfit.f \
gaussfita.f \
guessef.f \
histogram.f \
hplot.f \
ifbutton.f \
intersec.f \
iofunctions.f \
leecolumn.f \
leeonefile.f \
lrombo.f \
ludcmp.f \
ludcmpd.f \
lusolv.f \
lusolvd.f \
mapping.f \
maxdimb9.f \
mideoff.f \
mideoffset.f \
operbox9.f \
ordena1f.f \
ordena1f1i.f \
ordena3f3i.f \
palette.f \
pbound.f \
pcut.f \
plot3dbars.f \
pmapp.f \
polfit.f \
polfitsig.f \
poly2.f \
pwave.f \
pxmap.f \
randomnumber.f \
readpwave.f \
rectify.f \
refineba.f \
refinebl.f \
rpgband.f \
rpgbegin.f \
rpgbegok.f \
rpgenv.f \
rpgeras.f \
rpgerasb.f \
rpgerasw.f \
sescrfits.f \
sescrredu.f \
sextractor.f \
sfitpol.f \
shiftb9.f \
shiftimage.f \
show_fitpol.f \
showperc.f \
skysub.f \
sleefits.f \
slit_aperture.f \
sortlines.f \
splfit.f \
srcpat.f \
statistic.f \
statisticb9.f \
subimath.f \
sublook.f \
subplot.f \
subplotbis.f \
subzoom.f \
systemfunction.f \
try_reduceme.f \
unrectify.f \
whereami.f \
x2arc.f \
xcut.f \
xextract.f \
xnirspec.f \
ycut.f \
zoomhistog.f \
zscale.f
