#
bin_PROGRAMS = xnirspec zzz_memory_test
xnirspec_SOURCES = activebut.f90 \
arclength.f90 \
binsearch.f90 \
boundary.f90 \
button.inc \
button.f90 \
buttqbr.f90 \
buttqcf.f90 \
buttqch.f90 \
buttqex.f90 \
buttqit.f90 \
buttqpr.f90 \
buttqxb.f90 \
buttqyb.f90 \
buttqytext.f90 \
buttsbr.f90 \
buttscf.f90 \
buttsch.f90 \
buttsex.f90 \
buttsit.f90 \
buttspr.f90 \
buttsxb.f90 \
buttsyb.f90 \
buttsytext.f90 \
centroid.f90 \
chupper.f90 \
combine.f90 \
combpf.f90 \
creatergb.f90 \
cubspl.f90 \
cubsplx.f90 \
distpp.f90 \
distpr.f90 \
downhill.f90 \
drawpolxy.f90 \
drawpolyx.f90 \
dynamic_array_imagen.f90 \
dynamic_array_imagen_.f90 \
dynamic_array_lnull.f90 \
dynamic_array_lnull_.f90 \
dynamic_array_pixel.f90 \
expline.f90 \
factorialpf.f90 \
fderi.f90 \
findmax.f90 \
findmml.f90 \
fitpol.f90 \
fmap.f90 \
fmean0.f90 \
fmean0e.f90 \
fmean0w.f90 \
fmean1.f90 \
fmean2.f90 \
fmean2e.f90 \
fmedian1.f90 \
fmedian1e.f90 \
fpoly.f90 \
fpolyinv.f90 \
frobustrms0.f90 \
frobustrms1.f90 \
fstatistic.f90 \
gauscfit.f90 \
gauss2dfit.f90 \
gaussfit.f90 \
gaussfita.f90 \
guessef.f90 \
histogram.f90 \
hplot.f90 \
ifbutton.f90 \
intersec.f90 \
leecolumn.f90 \
leeonefile.f90 \
lrombo.f90 \
ludcmp.f90 \
ludcmpd.f90 \
lusolv.f90 \
lusolvd.f90 \
mapping.f90 \
maxdimb9.f90 \
mideoff.f90 \
mideoffset.f90 \
operbox9.f90 \
ordena1f.f90 \
ordena1f1i.f90 \
ordena3f3i.f90 \
palette.f90 \
pbound.f90 \
pcut.f90 \
plot3dbars.f90 \
plotascreg.f90 \
plotds9reg.f90 \
pmapp.f90 \
polfit.f90 \
polfitsig.f90 \
poly2.f90 \
pwave.f90 \
pxmap.f90 \
randomnumber.f90 \
read2i.f90 \
readc.f90 \
readf.f90 \
readi.f90 \
readilim.f90 \
readpwave.f90 \
rectify.f90 \
refineba.f90 \
refinebl.f90 \
rmblank.f90 \
rpgband.f90 \
rpgbegin.f90 \
rpgbegok.f90 \
rpgenv.f90 \
rpgeras.f90 \
rpgerasb.f90 \
rpgerasw.f90 \
sescrfits.f90 \
sescrredu.f90 \
sextractor.f90 \
sfitpol.f90 \
shiftb9.f90 \
shiftimage.f90 \
show_fitpol.f90 \
showperc.f90 \
skysub.f90 \
sleefits.f90 \
slit_aperture.f90 \
sortlines.f90 \
splfit.f90 \
srcpat.f90 \
statistic.f90 \
statisticb9.f90 \
subimath.f90 \
sublook.f90 \
subplot.f90 \
subplotbis.f90 \
subzoom.f90 \
systemfunction.f90 \
truebeg.f90 \
truelen.f90 \
try_reduceme.f90 \
unrectify.f90 \
whereami.f90 \
x2arc.f90 \
xcut.f90 \
xextract.f90 \
xnirspec.f90 \
ycut.f90 \
zoomhistog.f90 \
zscale.f90

xnirspec_LDADD = $(CFITSIO_LIBS) $(PGPLOT_LDFLAGS)

zzz_memory_test_SOURCES = zzz_memory_test.f90

